feat: Add event list to events component

--- a/src/app/features/home/events/events.component.html
+++ b/src/app/features/home/events/events.component.html
@@ -1,7 +1,9 @@
 <p>events works!</p>
-
+<pre>
+    {{events$ | async | json}}
+</pre>
 visualizzi la lista degli eventi
 ---
-@if(currentUserType === userTypes.MASTER){
+@defer(when currentUserType === userTypes.MASTER){
   <app-form [formConfig]="formConfig" (onSubmit)="handleCreation($event)"/>
 }
