feat: Refactor EventsService to include polling for events
The code changes in this commit refactor the EventsService to include polling for events. The `getEventsList` method is modified to return an Observable of GameEvent[], and a new `pollEvents` method is added to continuously fetch the events list at regular intervals. The `destroyPollEvents` method is also added to stop the polling when needed.

This commit also includes changes to the EventsComponent, where the `pollEvents` method is called in the `ngOnInit` lifecycle hook to start the polling, and the `destroyPollEvents` method is called in the `ngOnDestroy` lifecycle hook to stop the polling.

Additionally, the loading interceptor is updated to include a check for the `disableLoading` header in the request. If the header is present, the interceptor skips the loading logic.

This commit addresses the need to continuously fetch the events list and improves the overall user experience by providing real-time updates.

--- a/src/app/features/home/events/events.component.html
+++ b/src/app/features/home/events/events.component.html
@@ -1,9 +1,12 @@
-<p>events works!</p>
-<pre>
+
+<section class="events-container">
+  <pre>
     {{events$ | async | json}}
 </pre>
-visualizzi la lista degli eventi
 ---
-@defer(when currentUserType === userTypes.MASTER){
-  <app-form [formConfig]="formConfig" (onSubmit)="handleCreation($event)"/>
+@if(currentUserType === userTypes.MASTER){
+  <div class="events-master-form">
+    <app-form [formConfig]="formConfig" (onSubmit)="handleCreation($event)"/>
+  </div>
 }
+</section>
