feat: Refactor EventsService to include polling for events

--- a/src/app/features/home/user-management/user-management.component.html
+++ b/src/app/features/home/user-management/user-management.component.html
@@ -3,3 +3,6 @@
     [startingValues]="userData$ | async"
     (onSubmit)="handleSubmit($event)"
 />
+<button class="back-button" mat-button [routerLink]="['../']">
+    Back to app
+</button>
