--- a/src/app/features/auth/signin/signin.component.html
+++ b/src/app/features/auth/signin/signin.component.html
@@ -1,4 +1,7 @@
 <mat-card class="card_sm">
+  <mat-card-header>
+    <mat-card-title> Login </mat-card-title>
+  </mat-card-header>
   <mat-card-content>
     <app-form
       [formConfig]="signInFormConfig"
