--- a/src/app/features/home/events/events.component.html
+++ b/src/app/features/home/events/events.component.html
@@ -1,9 +1,23 @@
 
 <section class="events-container">
-  <pre>
-    {{events$ | async | json}}
-</pre>
----
+
+  @for(event of events$ | async; track event.id){
+    <mat-card class="event-card">
+      <mat-card-header>
+        <mat-card-title>
+          📍 | {{event.title}}
+        </mat-card-title>
+        <mat-card-subtitle>
+          ⏱️ | {{event.creationDate | date : 'd/MM/YYY hh:mm:ss'}}
+        </mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        {{event.content}}
+      </mat-card-content>
+
+    </mat-card>
+  }
+
 @if(currentUserType === userTypes.MASTER){
   <div class="events-master-form">
     <app-form [formConfig]="formConfig" (onSubmit)="handleCreation($event)"/>
