--- a/src/app/features/home/events/events.component.scss
+++ b/src/app/features/home/events/events.component.scss
@@ -1,9 +1,11 @@
-@use "@angular/material" as mat;
-@use "../../../../styles/theme/m3-theme.scss" as m3;
-@include mat.core();
+
 
 .events-master-form{
     position: sticky;
     bottom: 0;
-    background-color: mat.get-theme-color(m3.$light-theme, primary, 99);
+    background-color: var(--mat-app-background-color);
+}
+
+.event-card{
+    margin: 1rem 0;
 }
