--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,9 +1,23 @@
-<button 
-    mat-stroked-button 
-    [routerLink]="[authService.currentUser.type, 'user-management']"> 
-        Modifica utente 
-</button>
-<button mat-flat-button [routerLink]="[authService.currentUser.type, 'events']"> 
-    Eventi
-</button>
-<router-outlet/>
+<nav mat-tab-nav-bar>
+  @for(item of navConfig; track $index){
+  <a
+    mat-tab-link
+    [routerLink]="item.url"
+    [active]="currentUrl === '/' + item.url"
+  >
+    {{ item.label }}
+  </a>
+  }
+</nav>
+<section class="app-content">
+  <app-loading>
+    <ng-container loading>
+      <div class="spinner">
+        <mat-spinner></mat-spinner>
+      </div>
+    </ng-container>
+    <ng-container loaded>
+      <router-outlet />
+    </ng-container>
+  </app-loading>
+</section>
